<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modelsheets.editProfileModel">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="170.3dp"
                android:layout_height="170.3dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/profile_sample" />

            <ImageView
                android:id="@+id/camera_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-40dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/camera_icon" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_name_lable"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray_400"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/secondary_color"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sample_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputSummeryName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/gray_400"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/secondary_color"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sample_email" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDescription"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_lable"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray_400"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/secondary_color"
            app:hintEnabled="true" />

        <Button
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/secondary_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/save_changes_btn"
            android:textColor="@color/primary_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/summery_edit_cancel_btn"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="#EEEEEE"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancel_btn_text"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>