<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:backgroundTint="@color/primary_color"
    tools:context=".modules.HomeScreenActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="647dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greeting_morning"
                    android:textAlignment="textStart"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="199dp"
                    android:layout_height="16dp"
                    android:gravity="top"
                    android:paddingLeft="10dp"
                    android:text="Monday, January 25, 2021"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <ImageView
                android:id="@+id/time_img"
                android:layout_width="104dp"
                android:layout_height="96dp"
                android:layout_marginLeft="30dp"
                app:srcCompat="@drawable/sun_icon" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/summery_size"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-20dp"
            android:stepSize="20.0"
            android:value="20.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:haloColor="@color/gray_400"
            app:labelBehavior="gone"
            app:thumbColor="@color/primary_color"
            app:thumbRadius="5dp"
            app:tickColor="#00FFFFFF"
            app:trackColorActive="@color/secondary_color" />

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/short_txt"
                android:textColor="@color/gray_400"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lonng"
                android:textAlignment="viewEnd"
                android:textColor="@color/gray_400"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="368dp"
            android:layout_height="336.56dp"
            android:background="@drawable/input_filed_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/summery_hint"
            android:inputType="textMultiLine"
            android:padding="25dp" />

        <TextView
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/min_value"
            android:textColor="@color/gray_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <Button
            android:id="@+id/summey_btn"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="39dp"
            android:backgroundTint="@color/secondary_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/summery_btn_txt"
            android:textSize="20sp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral99"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/bottom_navigation_icon_color"
        app:itemPaddingBottom="8dp"
        app:itemPaddingTop="8dp"
        app:itemRippleColor="@color/gray_400"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>