<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.OnStartScreenActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="230.38dp"
        android:layout_height="324.9dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/hello_robo" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="109dp"
            android:layout_height="47.99dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/logo_text"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="107dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/login_btn_txt"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/Signup_btn_txt"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>